@@ -32,7 +32,6 @@ import io.swagger.annotations.SecurityDefinition;
 import io.swagger.annotations.SwaggerDefinition;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -859,7 +858,7 @@ public class PinotTenantRestletResource {
       notes = "Get list of rebalance jobs for this tenant")
   public Map<String, Map<String, String>> getControllerJobs(
       @ApiParam(value = "Name of the tenant", required = true) @PathParam("tenantName") String tenantName) {
-    return _pinotHelixResourceManager.getAllJobs(Collections.singleton(ControllerJobTypes.TENANT_REBALANCE),
+    return _pinotHelixResourceManager.getAllJobs(Set.of(ControllerJobTypes.TENANT_REBALANCE),
         jobMetadata -> jobMetadata.get(CommonConstants.ControllerJob.TENANT_NAME)
             .equals(tenantName));
   }
