@@ -18,9 +18,9 @@
  */
 package org.apache.pinot.controller;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 import org.apache.helix.ConfigAccessor;
 import org.apache.helix.model.ClusterConfig;
 import org.apache.helix.model.HelixConfigScope;
@@ -69,7 +69,7 @@ public class ControllerStarterDynamicEnvTest extends ControllerTest {
     assertEquals(instanceConfig.getInstanceName(), instanceId);
     assertEquals(instanceConfig.getHostName(), "myHost");
     assertEquals(instanceConfig.getPort(), "1234");
-    assertEquals(instanceConfig.getTags(), Collections.singleton(CONTROLLER_INSTANCE));
+    assertEquals(instanceConfig.getTags(), Set.of(CONTROLLER_INSTANCE));
 
     stopController();
     stopZk();
@@ -93,7 +93,7 @@ public class ControllerStarterDynamicEnvTest extends ControllerTest {
     assertEquals(instanceConfig.getInstanceName(), instanceId);
     assertEquals(instanceConfig.getHostName(), "myHost");
     assertEquals(instanceConfig.getPort(), "1234");
-    assertEquals(instanceConfig.getTags(), Collections.singleton(CONTROLLER_INSTANCE));
+    assertEquals(instanceConfig.getTags(), Set.of(CONTROLLER_INSTANCE));
 
     stopController();
     stopZk();
@@ -117,7 +117,7 @@ public class ControllerStarterDynamicEnvTest extends ControllerTest {
     assertEquals(instanceConfig.getInstanceName(), instanceId);
     assertEquals(instanceConfig.getHostName(), "myHost");
     assertEquals(instanceConfig.getPort(), "1234");
-    assertEquals(instanceConfig.getTags(), Collections.singleton(CONTROLLER_INSTANCE));
+    assertEquals(instanceConfig.getTags(), Set.of(CONTROLLER_INSTANCE));
 
     stopController();
     stopZk();
