@@ -24,7 +24,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -224,7 +223,7 @@ public class ControllerTest {
   ///
   /// @return A map of headers (key-value pairs) to be used for the [PinotAdminClient].
   protected Map<String, String> getAdminClientHeaders() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   /**
@@ -788,7 +787,7 @@ public class ControllerTest {
 
   public static Schema createDummySchemaWithPrimaryKey(String tableName) {
     Schema schema = createDummySchema(tableName);
-    schema.setPrimaryKeyColumns(Collections.singletonList("dimA"));
+    schema.setPrimaryKeyColumns(List.of("dimA"));
     return schema;
   }
 
@@ -1373,7 +1372,7 @@ public class ControllerTest {
 
   public static String sendPostRequest(String urlString, String payload)
       throws IOException {
-    return sendPostRequest(urlString, payload, Collections.emptyMap());
+    return sendPostRequest(urlString, payload, Map.of());
   }
 
   public static String sendPostRequest(String urlString, String payload, Map<String, String> headers)
@@ -1398,7 +1397,7 @@ public class ControllerTest {
       throws IOException {
     try {
       SimpleHttpResponse resp =
-          getHttpClient().sendJsonPostRequest(new URL(urlString).toURI(), payload, Collections.emptyMap());
+          getHttpClient().sendJsonPostRequest(new URL(urlString).toURI(), payload, Map.of());
       return Pair.of(resp.getStatusCode(), constructResponse(resp));
     } catch (URISyntaxException e) {
       throw new IOException(e);
@@ -1425,7 +1424,7 @@ public class ControllerTest {
 
   public static String sendPutRequest(String urlString, String payload)
       throws IOException {
-    return sendPutRequest(urlString, payload, Collections.emptyMap());
+    return sendPutRequest(urlString, payload, Map.of());
   }
 
   public static String sendPutRequest(String urlString, String payload, Map<String, String> headers)
@@ -1441,7 +1440,7 @@ public class ControllerTest {
 
   public static String sendDeleteRequest(String urlString)
       throws IOException {
-    return sendDeleteRequest(urlString, Collections.emptyMap());
+    return sendDeleteRequest(urlString, Map.of());
   }
 
   public static String sendDeleteRequest(String urlString, Map<String, String> headers)
@@ -1461,7 +1460,7 @@ public class ControllerTest {
 
   public static SimpleHttpResponse sendMultipartPostRequest(String url, String body)
       throws IOException {
-    return sendMultipartPostRequest(url, body, Collections.emptyMap());
+    return sendMultipartPostRequest(url, body, Map.of());
   }
 
   public static SimpleHttpResponse sendMultipartPostRequest(String url, String body, Map<String, String> headers)
@@ -1639,11 +1638,11 @@ public class ControllerTest {
 
     // In a single tenant cluster, only the default tenant should exist
     assertEquals(_helixResourceManager.getAllBrokerTenantNames(),
-        Collections.singleton(TagNameUtils.DEFAULT_TENANT_NAME));
+        Set.of(TagNameUtils.DEFAULT_TENANT_NAME));
     assertEquals(_helixResourceManager.getAllInstancesForBrokerTenant(TagNameUtils.DEFAULT_TENANT_NAME).size(),
         DEFAULT_NUM_BROKER_INSTANCES);
     assertEquals(_helixResourceManager.getAllServerTenantNames(),
-        Collections.singleton(TagNameUtils.DEFAULT_TENANT_NAME));
+        Set.of(TagNameUtils.DEFAULT_TENANT_NAME));
     assertEquals(_helixResourceManager.getAllInstancesForServerTenant(TagNameUtils.DEFAULT_TENANT_NAME).size(),
         DEFAULT_NUM_SERVER_INSTANCES);
 
