@@ -21,7 +21,6 @@ package org.apache.pinot.integration.tests;
 import com.fasterxml.jackson.databind.JsonNode;
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -109,7 +108,7 @@ public class SegmentGenerationMinionRealtimeIngestionTest extends BaseClusterInt
 
     String url = getControllerBaseApiUrl() + "/tasks/execute";
     sendPostRequest(url, JsonUtils.objectToString(adhocTaskConfig),
-        Collections.singletonMap("accept", "application/json"));
+        Map.of("accept", "application/json"));
     TestUtils.waitForCondition(aVoid -> {
       try {
         int totalDocs = getTotalDocs(REALTIME_TABLE_NAME);
@@ -134,7 +133,7 @@ public class SegmentGenerationMinionRealtimeIngestionTest extends BaseClusterInt
     taskConfigs.put(BatchConfigProperties.INPUT_FORMAT, "avro");
 
     TableTaskConfig tableTaskConfig =
-        new TableTaskConfig(Collections.singletonMap("SegmentGenerationAndPushTask", taskConfigs));
+        new TableTaskConfig(Map.of("SegmentGenerationAndPushTask", taskConfigs));
     BatchIngestionConfig batchIngestionConfig = new BatchIngestionConfig(List.of(taskConfigs), "APPEND", "DAILY");
     IngestionConfig ingestionConfig = new IngestionConfig();
     ingestionConfig.setBatchIngestionConfig(batchIngestionConfig);
@@ -144,7 +143,7 @@ public class SegmentGenerationMinionRealtimeIngestionTest extends BaseClusterInt
     String url = getControllerBaseApiUrl() + "/tasks/schedule?taskType=SegmentGenerationAndPushTask&tableName="
         + REALTIME_TABLE_NAME_WITH_TYPE;
 
-    sendPostRequest(url, null, Collections.singletonMap("accept", "application/json"));
+    sendPostRequest(url, null, Map.of("accept", "application/json"));
     TestUtils.waitForCondition(aVoid -> {
       try {
         int totalDocs = getTotalDocs(REALTIME_TABLE_NAME);
