@@ -24,7 +24,6 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -71,8 +70,8 @@ public class FileBasedSegmentWriterTest {
     _outputDir = new File(_tmpDir, "segmentWriterOutputDir");
 
     _ingestionConfig = new IngestionConfig();
-    _ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(Collections.singletonList(
-        Collections.singletonMap(BatchConfigProperties.OUTPUT_DIR_URI, _outputDir.getAbsolutePath())), "APPEND",
+    _ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(List.of(
+        Map.of(BatchConfigProperties.OUTPUT_DIR_URI, _outputDir.getAbsolutePath())), "APPEND",
         "HOURLY"));
     _ingestionConfig.setTransformConfigs(Arrays.asList(new TransformConfig("aSimpleMap_str", "jsonFormat(aSimpleMap)"),
         new TransformConfig("anAdvancedMap_str", "jsonFormat(anAdvancedMap)")));
@@ -127,7 +126,7 @@ public class FileBasedSegmentWriterTest {
       // expected
     }
 
-    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(Collections.emptyList(), "APPEND", "HOURLY"));
+    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(List.of(), "APPEND", "HOURLY"));
     try {
       segmentWriter.init(tableConfig, _schema);
       Assert.fail("Should fail due to missing batchConfigMaps");
@@ -136,7 +135,7 @@ public class FileBasedSegmentWriterTest {
     }
 
     ingestionConfig.setBatchIngestionConfig(
-        new BatchIngestionConfig(Collections.singletonList(Collections.emptyMap()), "APPEND", "HOURLY"));
+        new BatchIngestionConfig(List.of(Map.of()), "APPEND", "HOURLY"));
     try {
       segmentWriter.init(tableConfig, _schema);
       Assert.fail("Should fail due to missing outputDirURI in batchConfigMap");
@@ -144,8 +143,8 @@ public class FileBasedSegmentWriterTest {
       // expected
     }
 
-    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(Collections.singletonList(
-        Collections.singletonMap(BatchConfigProperties.OUTPUT_DIR_URI, _outputDir.getAbsolutePath())), "APPEND",
+    ingestionConfig.setBatchIngestionConfig(new BatchIngestionConfig(List.of(
+        Map.of(BatchConfigProperties.OUTPUT_DIR_URI, _outputDir.getAbsolutePath())), "APPEND",
         "HOURLY"));
     segmentWriter.init(tableConfig, _schema);
     segmentWriter.close();
@@ -243,7 +242,7 @@ public class FileBasedSegmentWriterTest {
         BatchConfigProperties.SEGMENT_NAME), "customSegmentName");
     IngestionConfig ingestionConfig = new IngestionConfig();
     ingestionConfig.setBatchIngestionConfig(
-        new BatchIngestionConfig(Collections.singletonList(batchConfigMap), "APPEND", "HOURLY"));
+        new BatchIngestionConfig(List.of(batchConfigMap), "APPEND", "HOURLY"));
     ingestionConfig.setTransformConfigs(_ingestionConfig.getTransformConfigs());
     TableConfig tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
@@ -314,7 +313,7 @@ public class FileBasedSegmentWriterTest {
     batchConfigMap.put(BatchConfigProperties.OVERWRITE_OUTPUT, "true");
     IngestionConfig ingestionConfig = new IngestionConfig();
     ingestionConfig.setBatchIngestionConfig(
-        new BatchIngestionConfig(Collections.singletonList(batchConfigMap), "APPEND", "HOURLY"));
+        new BatchIngestionConfig(List.of(batchConfigMap), "APPEND", "HOURLY"));
     ingestionConfig.setTransformConfigs(_ingestionConfig.getTransformConfigs());
     TableConfig tableConfig =
         new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).setTimeColumnName(TIME_COLUMN_NAME)
