@@ -19,7 +19,6 @@
 package org.apache.pinot.query.runtime.operator;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.pinot.common.datatable.StatMap;
@@ -49,8 +48,8 @@ import static org.mockito.Mockito.when;
 public class OperatorTestUtil {
   // simple key-value collision schema/data test set: "Aa" and "BB" have same hash code in java.
   private static final List<List<Object[]>> SIMPLE_KV_DATA_ROWS = List.of(
-      List.of(new Object[]{1, "Aa"}, new Object[]{2, "BB"}, new Object[]{3, "BB"}),
-      List.of(new Object[]{1, "AA"}, new Object[]{2, "Aa"})
+      List.<Object[]>of(new Object[]{1, "Aa"}, new Object[]{2, "BB"}, new Object[]{3, "BB"}),
+      List.<Object[]>of(new Object[]{1, "AA"}, new Object[]{2, "Aa"})
   );
   private static final MockDataBlockOperatorFactory MOCK_OPERATOR_FACTORY;
 
@@ -93,7 +92,7 @@ public class OperatorTestUtil {
   }
 
   public static ReceivingMailbox.MseBlockWithStats errorWithEmptyStats(Exception e) {
-    return new ReceivingMailbox.MseBlockWithStats(ErrorMseBlock.fromException(e), Collections.emptyList());
+    return new ReceivingMailbox.MseBlockWithStats(ErrorMseBlock.fromException(e), List.of());
   }
 
   public static ReceivingMailbox.MseBlockWithStats errorWithStats(Exception e, List<DataBuffer> serializedStats) {
@@ -101,7 +100,7 @@ public class OperatorTestUtil {
   }
 
   public static ReceivingMailbox.MseBlockWithStats eosWithEmptyStats() {
-    return new ReceivingMailbox.MseBlockWithStats(SuccessMseBlock.INSTANCE, Collections.emptyList());
+    return new ReceivingMailbox.MseBlockWithStats(SuccessMseBlock.INSTANCE, List.of());
   }
 
   public static ReceivingMailbox.MseBlockWithStats eosWithStats(List<DataBuffer> serializedStats) {
